--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.ejs": "html",
-        "types.h": "c"
+        "types.h": "c",
+        "criptomoneda.h": "c",
+        "usuario.h": "c",
+        "time.h": "c"
     }
 }
